fix: footer z-index

--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -1,6 +1,8 @@
 .footer
 	padding-bottom: 20px
 	background: var(--color-white)
+	position: relative
+	z-index: 20
 	&-block
 		background: var(--color-orange)
 		border-radius: 20px
